fix blurry text for windows scaled UIs
window.innerWidth & window.innerHeight return
downscaled values if windows UI scaling is enabled.
this fixes the canvas width/height to match the monitor size.

--- a/src/browser/index.css
+++ b/src/browser/index.css
@@ -5,4 +5,5 @@ canvas {
   left: 0;
   top: 0;
   font-family: 'Roboto Mono';
+  transform-origin: 0 0;
 }
